--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
-    "name": "BtyBugPlugins/studios",
-    "authors": [
-        {
-            "name": "Sahak",
-            "email": "hakobyan.sahak88@gmail.com"
-        }
-    ],
-    "type": "module",
-    "route": "framework",
-    "require": {},
-    "autoload": {
-        "psr-4": {
-            "BtyBugPlugins\\Studios\\": "src/"
-        }
+  "name": "BtyBugPlugins/studios",
+  "authors": [
+    {
+      "name": "Sahak",
+      "email": "hakobyan.sahak88@gmail.com"
     }
+  ],
+  "type": "module",
+  "route": "framework",
+  "require": {},
+  "autoload": {
+    "psr-4": {
+      "BtyBugPlugins\\Studios\\": "src/"
+    },
+    "files": [
+      "src/bootstrap.php"
+    ]
+  }
 }
